add markdown report for job: jrevels/julia@b61f660 vs jrevels/julia@b61f660

--- a/b61f660/b61f660_vs_b61f660.md
+++ b/b61f660/b61f660_vs_b61f660.md
@@ -6,7 +6,7 @@
 
 *Tag Predicate:* `"blas"`
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-192379054)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-192463976)
 
 ## Results
 
@@ -28,14 +28,22 @@ shown below (an empty table means that all benchmark results remained invariant 
 
 | Group ID | Benchmark ID | time | GC time | memory allocated | number of allocations |
 |----------|--------------|------|---------|------------------|-----------------------|
-| `"blas"` | `("gbmv",1024)` | **1.17** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("gbmv!",1024)` | **1.21** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("her!",1024)` | **1.22** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("symv",1024)` | **1.09** :x: | 1.78 | 1.00 | 1.00 |
-| `"blas"` | `("syr!",1024)` | **0.94** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("trmv",1024)` | **0.81** :white_check_mark: | 1.03 | 1.00 | 1.00 |
-| `"blas"` | `("trmv!",1024)` | **0.82** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("trsv!",1024)` | **0.95** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("gbmv",1024)` | **0.91** :white_check_mark: | 0.99 | 1.00 | 1.00 |
+| `"blas"` | `("gbmv!",1024)` | **1.08** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("gemv",1024)` | **0.86** :white_check_mark: | 0.99 | 1.00 | 1.00 |
+| `"blas"` | `("gemv!",1024)` | **0.87** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("ger!",1024)` | **0.92** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("sbmv",1024)` | **0.93** :white_check_mark: | 1.04 | 1.00 | 1.00 |
+| `"blas"` | `("sbmv!",1024)` | **0.91** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("symv",1024)` | **0.77** :white_check_mark: | 0.99 | 1.00 | 1.00 |
+| `"blas"` | `("symv!",1024)` | **0.88** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("syr!",1024)` | **0.79** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("syrk",1024)` | **0.93** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("trmm!",1024)` | **1.07** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("trmv",1024)` | **1.06** :x: | 0.98 | 1.00 | 1.00 |
+| `"blas"` | `("trmv!",1024)` | **1.10** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("trsv",1024)` | **0.93** :white_check_mark: | 0.96 | 1.00 | 1.00 |
+| `"blas"` | `("trsv!",1024)` | **0.94** :white_check_mark: | 1.00 | 1.00 | 1.00 |
 
 ## Version Info
 
@@ -50,19 +58,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (20066.71875 MB free)
-Uptime: 1.3485679e7 sec
-Load Avg:  5.74658203125  4.28564453125  3.12353515625
+Memory: 31.383678436279297 GB (20066.453125 MB free)
+Uptime: 1.3496598e7 sec
+Load Avg:  4.74755859375  3.4619140625  2.7705078125
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   12857538 s       1615 s    4186763 s  1326738258 s          4 s
-#2  3501 MHz    6563152 s        142 s    2239263 s  1337624673 s          0 s
-#3  3501 MHz    5577620 s       1139 s    2671014 s  1338465057 s          1 s
-#4  3501 MHz    4879596 s        319 s    2221819 s  1340075951 s          0 s
-#5  3501 MHz    3587283 s       4070 s    1734900 s  1342725757 s          0 s
-#6  3501 MHz    3197606 s       1003 s    1712740 s  1343190289 s          0 s
-#7  3501 MHz    3458789 s       2031 s    1615696 s  1342979376 s          0 s
-#8  3501 MHz    3644991 s       1242 s    1572710 s  1342929032 s          0 s
+#1  3501 MHz   13748859 s       1615 s    4284201 s  1326840944 s          4 s
+#2  3501 MHz    6590876 s        142 s    2246838 s  1338679904 s          0 s
+#3  3501 MHz    5598466 s       1139 s    2678222 s  1339527797 s          1 s
+#4  3501 MHz    4899665 s        319 s    2229237 s  1341139402 s          0 s
+#5  3501 MHz    3608229 s       4070 s    1738403 s  1343792786 s          0 s
+#6  3501 MHz    3215686 s       1003 s    1718329 s  1344258491 s          0 s
+#7  3501 MHz    3476394 s       2031 s    1621677 s  1344047651 s          0 s
+#8  3501 MHz    3672129 s       1242 s    1577350 s  1343989132 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -82,19 +90,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (20066.0703125 MB free)
-Uptime: 1.3486087e7 sec
-Load Avg:  5.93359375  5.119140625  3.86962890625
+Memory: 31.383678436279297 GB (20068.41796875 MB free)
+Uptime: 1.3497002e7 sec
+Load Avg:  4.78662109375  3.99658203125  3.2158203125
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   12892043 s       1615 s    4191737 s  1326739632 s          4 s
-#2  3501 MHz    6563152 s        142 s    2239310 s  1337665411 s          0 s
-#3  3501 MHz    5577624 s       1139 s    2671088 s  1338505805 s          1 s
-#4  3501 MHz    4879596 s        319 s    2221872 s  1340116726 s          0 s
-#5  3501 MHz    3587284 s       4070 s    1734916 s  1342766542 s          0 s
-#6  3501 MHz    3197609 s       1003 s    1712746 s  1343231142 s          0 s
-#7  3501 MHz    3458789 s       2031 s    1615697 s  1343020234 s          0 s
-#8  3501 MHz    3644991 s       1242 s    1572710 s  1342969892 s          0 s
+#1  3501 MHz   13748951 s       1615 s    4284335 s  1326881024 s          4 s
+#2  3501 MHz    6608472 s        142 s    2253065 s  1338696553 s          0 s
+#3  3501 MHz    5617367 s       1139 s    2683511 s  1339544084 s          1 s
+#4  3501 MHz    4918270 s        319 s    2234725 s  1341155784 s          0 s
+#5  3501 MHz    3628493 s       4070 s    1741974 s  1343809412 s          0 s
+#6  3501 MHz    3233741 s       1003 s    1723799 s  1344275443 s          0 s
+#7  3501 MHz    3508940 s       2031 s    1626293 s  1344050967 s          0 s
+#8  3501 MHz    3689605 s       1242 s    1583385 s  1344006102 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
