--- a/b61f660/b61f660_vs_b61f660.md
+++ b/b61f660/b61f660_vs_b61f660.md
@@ -6,7 +6,7 @@
 
 *Tag Predicate:* `"blas"`
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-192463976)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-192479731)
 
 ## Results
 
@@ -28,22 +28,18 @@ shown below (an empty table means that all benchmark results remained invariant 
 
 | Group ID | Benchmark ID | time | GC time | memory allocated | number of allocations |
 |----------|--------------|------|---------|------------------|-----------------------|
-| `"blas"` | `("gbmv",1024)` | **0.91** :white_check_mark: | 0.99 | 1.00 | 1.00 |
-| `"blas"` | `("gbmv!",1024)` | **1.08** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("gemv",1024)` | **0.86** :white_check_mark: | 0.99 | 1.00 | 1.00 |
-| `"blas"` | `("gemv!",1024)` | **0.87** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("ger!",1024)` | **0.92** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("sbmv",1024)` | **0.93** :white_check_mark: | 1.04 | 1.00 | 1.00 |
-| `"blas"` | `("sbmv!",1024)` | **0.91** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("symv",1024)` | **0.77** :white_check_mark: | 0.99 | 1.00 | 1.00 |
-| `"blas"` | `("symv!",1024)` | **0.88** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("syr!",1024)` | **0.79** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("syrk",1024)` | **0.93** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("trmm!",1024)` | **1.07** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("trmv",1024)` | **1.06** :x: | 0.98 | 1.00 | 1.00 |
-| `"blas"` | `("trmv!",1024)` | **1.10** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("trsv",1024)` | **0.93** :white_check_mark: | 0.96 | 1.00 | 1.00 |
-| `"blas"` | `("trsv!",1024)` | **0.94** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("gbmv",1024)` | **1.71** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("gbmv!",1024)` | **2.59** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("gemv!",1024)` | **1.07** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("sbmv",1024)` | **1.05** :x: | 1.05 | 1.00 | 1.00 |
+| `"blas"` | `("sbmv!",1024)` | **1.07** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("symv",1024)` | **1.12** :x: | 0.95 | 1.00 | 1.00 |
+| `"blas"` | `("symv!",1024)` | **1.14** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("syr!",1024)` | **1.13** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("trmv",1024)` | **1.12** :x: | 0.96 | 1.00 | 1.00 |
+| `"blas"` | `("trmv!",1024)` | **1.13** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("trsv",1024)` | **1.15** :x: | 0.97 | 1.00 | 1.00 |
+| `"blas"` | `("trsv!",1024)` | **1.18** :x: | 1.00 | 1.00 | 1.00 |
 
 ## Version Info
 
@@ -58,19 +54,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (20066.453125 MB free)
-Uptime: 1.3496598e7 sec
-Load Avg:  4.74755859375  3.4619140625  2.7705078125
+Memory: 31.383678436279297 GB (20069.625 MB free)
+Uptime: 1.3499352e7 sec
+Load Avg:  1.0302734375  1.1259765625  1.11865234375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   13748859 s       1615 s    4284201 s  1326840944 s          4 s
-#2  3501 MHz    6590876 s        142 s    2246838 s  1338679904 s          0 s
-#3  3501 MHz    5598466 s       1139 s    2678222 s  1339527797 s          1 s
-#4  3501 MHz    4899665 s        319 s    2229237 s  1341139402 s          0 s
-#5  3501 MHz    3608229 s       4070 s    1738403 s  1343792786 s          0 s
-#6  3501 MHz    3215686 s       1003 s    1718329 s  1344258491 s          0 s
-#7  3501 MHz    3476394 s       2031 s    1621677 s  1344047651 s          0 s
-#8  3501 MHz    3672129 s       1242 s    1577350 s  1343989132 s          0 s
+#1  3501 MHz   13749587 s       1615 s    4285412 s  1327113341 s          4 s
+#2  3501 MHz    6619545 s        142 s    2255820 s  1338917719 s          0 s
+#3  3501 MHz    5628974 s       1139 s    2686829 s  1339764153 s          1 s
+#4  3501 MHz    4965802 s        319 s    2238083 s  1341339896 s          0 s
+#5  3501 MHz    3640855 s       4070 s    1743946 s  1344030072 s          0 s
+#6  3501 MHz    3243474 s       1003 s    1727477 s  1344497023 s          0 s
+#7  3501 MHz    3527219 s       2031 s    1629146 s  1344264827 s          0 s
+#8  3501 MHz    3699534 s       1242 s    1586818 s  1344227729 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -90,19 +86,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (20068.41796875 MB free)
-Uptime: 1.3497002e7 sec
-Load Avg:  4.78662109375  3.99658203125  3.2158203125
+Memory: 31.383678436279297 GB (20065.35546875 MB free)
+Uptime: 1.3499758e7 sec
+Load Avg:  1.02197265625  1.052734375  1.08984375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   13748951 s       1615 s    4284335 s  1326881024 s          4 s
-#2  3501 MHz    6608472 s        142 s    2253065 s  1338696553 s          0 s
-#3  3501 MHz    5617367 s       1139 s    2683511 s  1339544084 s          1 s
-#4  3501 MHz    4918270 s        319 s    2234725 s  1341155784 s          0 s
-#5  3501 MHz    3628493 s       4070 s    1741974 s  1343809412 s          0 s
-#6  3501 MHz    3233741 s       1003 s    1723799 s  1344275443 s          0 s
-#7  3501 MHz    3508940 s       2031 s    1626293 s  1344050967 s          0 s
-#8  3501 MHz    3689605 s       1242 s    1583385 s  1344006102 s          0 s
+#1  3501 MHz   13749595 s       1615 s    4285578 s  1327153522 s          4 s
+#2  3501 MHz    6619792 s        142 s    2255861 s  1338957945 s          0 s
+#3  3501 MHz    5666648 s       1139 s    2686860 s  1339766963 s          1 s
+#4  3501 MHz    4966402 s        319 s    2238116 s  1341379778 s          0 s
+#5  3501 MHz    3641109 s       4070 s    1743982 s  1344070282 s          0 s
+#6  3501 MHz    3243512 s       1003 s    1727496 s  1344537478 s          0 s
+#7  3501 MHz    3527220 s       2031 s    1629164 s  1344305312 s          0 s
+#8  3501 MHz    3699722 s       1242 s    1586824 s  1344268050 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
