--- a/b61f660/b61f660_vs_b61f660.md
+++ b/b61f660/b61f660_vs_b61f660.md
@@ -6,7 +6,7 @@
 
 *Tag Predicate:* `"blas"`
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-192479731)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-192493554)
 
 ## Results
 
@@ -28,18 +28,20 @@ shown below (an empty table means that all benchmark results remained invariant 
 
 | Group ID | Benchmark ID | time | GC time | memory allocated | number of allocations |
 |----------|--------------|------|---------|------------------|-----------------------|
-| `"blas"` | `("gbmv",1024)` | **1.71** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("gbmv!",1024)` | **2.59** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("gemv!",1024)` | **1.07** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("sbmv",1024)` | **1.05** :x: | 1.05 | 1.00 | 1.00 |
-| `"blas"` | `("sbmv!",1024)` | **1.07** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("symv",1024)` | **1.12** :x: | 0.95 | 1.00 | 1.00 |
-| `"blas"` | `("symv!",1024)` | **1.14** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("syr!",1024)` | **1.13** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("trmv",1024)` | **1.12** :x: | 0.96 | 1.00 | 1.00 |
-| `"blas"` | `("trmv!",1024)` | **1.13** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("trsv",1024)` | **1.15** :x: | 0.97 | 1.00 | 1.00 |
-| `"blas"` | `("trsv!",1024)` | **1.18** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("gbmv",1024)` | **0.75** :white_check_mark: | 1.01 | 1.00 | 1.00 |
+| `"blas"` | `("gbmv!",1024)` | **0.54** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("gemv",1024)` | **0.94** :white_check_mark: | 0.96 | 1.00 | 1.00 |
+| `"blas"` | `("gemv!",1024)` | **0.92** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("ger!",1024)` | **0.94** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("her!",1024)` | **1.18** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("sbmv!",1024)` | **0.94** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("symv",1024)` | **0.86** :white_check_mark: | 1.03 | 1.00 | 1.00 |
+| `"blas"` | `("symv!",1024)` | **0.85** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("syr!",1024)` | **0.82** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("trmv",1024)` | **0.95** :white_check_mark: | 1.04 | 1.00 | 1.00 |
+| `"blas"` | `("trmv!",1024)` | **0.89** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("trsv",1024)` | **0.83** :white_check_mark: | 1.02 | 1.00 | 1.00 |
+| `"blas"` | `("trsv!",1024)` | **0.82** :white_check_mark: | 1.00 | 1.00 | 1.00 |
 
 ## Version Info
 
@@ -54,19 +56,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (20069.625 MB free)
-Uptime: 1.3499352e7 sec
-Load Avg:  1.0302734375  1.1259765625  1.11865234375
+Memory: 31.383678436279297 GB (20064.24609375 MB free)
+Uptime: 1.3501407e7 sec
+Load Avg:  0.9970703125  0.7373046875  0.5341796875
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   13749587 s       1615 s    4285412 s  1327113341 s          4 s
-#2  3501 MHz    6619545 s        142 s    2255820 s  1338917719 s          0 s
-#3  3501 MHz    5628974 s       1139 s    2686829 s  1339764153 s          1 s
-#4  3501 MHz    4965802 s        319 s    2238083 s  1341339896 s          0 s
-#5  3501 MHz    3640855 s       4070 s    1743946 s  1344030072 s          0 s
-#6  3501 MHz    3243474 s       1003 s    1727477 s  1344497023 s          0 s
-#7  3501 MHz    3527219 s       2031 s    1629146 s  1344264827 s          0 s
-#8  3501 MHz    3699534 s       1242 s    1586818 s  1344227729 s          0 s
+#1  3501 MHz   13749630 s       1615 s    4286166 s  1327317186 s          4 s
+#2  3501 MHz    6619982 s        142 s    2255912 s  1339122657 s          0 s
+#3  3501 MHz    5667214 s       1139 s    2686874 s  1339931325 s          1 s
+#4  3501 MHz    5003806 s        319 s    2238148 s  1341507296 s          0 s
+#5  3501 MHz    3641424 s       4070 s    1744018 s  1344234869 s          0 s
+#6  3501 MHz    3243516 s       1003 s    1727516 s  1344702405 s          0 s
+#7  3501 MHz    3527222 s       2031 s    1629186 s  1344470238 s          0 s
+#8  3501 MHz    3700230 s       1242 s    1586842 s  1344432476 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -86,19 +88,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (20065.35546875 MB free)
-Uptime: 1.3499758e7 sec
-Load Avg:  1.02197265625  1.052734375  1.08984375
+Memory: 31.383678436279297 GB (20065.18359375 MB free)
+Uptime: 1.3501812e7 sec
+Load Avg:  0.9970703125  0.9306640625  0.697265625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   13749595 s       1615 s    4285578 s  1327153522 s          4 s
-#2  3501 MHz    6619792 s        142 s    2255861 s  1338957945 s          0 s
-#3  3501 MHz    5666648 s       1139 s    2686860 s  1339766963 s          1 s
-#4  3501 MHz    4966402 s        319 s    2238116 s  1341379778 s          0 s
-#5  3501 MHz    3641109 s       4070 s    1743982 s  1344070282 s          0 s
-#6  3501 MHz    3243512 s       1003 s    1727496 s  1344537478 s          0 s
-#7  3501 MHz    3527220 s       2031 s    1629164 s  1344305312 s          0 s
-#8  3501 MHz    3699722 s       1242 s    1586824 s  1344268050 s          0 s
+#1  3501 MHz   13749645 s       1615 s    4286337 s  1327357299 s          4 s
+#2  3501 MHz    6620877 s        142 s    2255934 s  1339162197 s          0 s
+#3  3501 MHz    5667497 s       1139 s    2686916 s  1339971454 s          1 s
+#4  3501 MHz    5040867 s        319 s    2238175 s  1341510671 s          0 s
+#5  3501 MHz    3642120 s       4070 s    1744044 s  1344274602 s          0 s
+#6  3501 MHz    3243520 s       1003 s    1727544 s  1344742825 s          0 s
+#7  3501 MHz    3527226 s       2031 s    1629206 s  1344510672 s          0 s
+#8  3501 MHz    3700250 s       1242 s    1586859 s  1344472898 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
