--- a/b61f660/b61f660_vs_b61f660.md
+++ b/b61f660/b61f660_vs_b61f660.md
@@ -4,9 +4,9 @@
 
 *Commit(s):* [jrevels/julia@b61f660](https://github.com/jrevels/julia/commit/b61f6603d059b0a49df5c5551d5a1a663a7ae504) vs [jrevels/julia@b61f660](https://github.com/jrevels/julia/commit/b61f6603d059b0a49df5c5551d5a1a663a7ae504)
 
-*Tag Predicate:* `"blas"`
+*Tag Predicate:* `ALL`
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-192493554)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-192544814)
 
 ## Results
 
@@ -28,20 +28,40 @@ shown below (an empty table means that all benchmark results remained invariant 
 
 | Group ID | Benchmark ID | time | GC time | memory allocated | number of allocations |
 |----------|--------------|------|---------|------------------|-----------------------|
-| `"blas"` | `("gbmv",1024)` | **0.75** :white_check_mark: | 1.01 | 1.00 | 1.00 |
-| `"blas"` | `("gbmv!",1024)` | **0.54** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("gemv",1024)` | **0.94** :white_check_mark: | 0.96 | 1.00 | 1.00 |
-| `"blas"` | `("gemv!",1024)` | **0.92** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("ger!",1024)` | **0.94** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("her!",1024)` | **1.18** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("sbmv!",1024)` | **0.94** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("symv",1024)` | **0.86** :white_check_mark: | 1.03 | 1.00 | 1.00 |
-| `"blas"` | `("symv!",1024)` | **0.85** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("syr!",1024)` | **0.82** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("trmv",1024)` | **0.95** :white_check_mark: | 1.04 | 1.00 | 1.00 |
-| `"blas"` | `("trmv!",1024)` | **0.89** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("trsv",1024)` | **0.83** :white_check_mark: | 1.02 | 1.00 | 1.00 |
-| `"blas"` | `("trsv!",1024)` | **0.82** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"array growth"` | `("push_multiple!",256)` | **1.10** :x: | 1.32 | 1.00 | 1.00 |
+| `"array index sum"` | `("sumcolon","Array{Float32,2}",(3,5))` | **1.07** :x: | 1.00 | 1.00 | 1.00 |
+| `"array index sum"` | `("sumcolon","BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",(3,5))` | **1.10** :x: | 0.97 | 1.00 | 1.00 |
+| `"array index sum"` | `("sumcolon","BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",(3,5))` | **1.09** :x: | 0.98 | 1.00 | 1.00 |
+| `"array index sum"` | `("sumelt","SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},false}",(300,500))` | **1.45** :x: | 1.00 | 1.00 | 1.00 |
+| `"array index sum"` | `("sumvector","BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int32,2}",(300,500))` | **0.93** :white_check_mark: | 1.03 | 1.00 | 1.00 |
+| `"blas"` | `("gbmv",1024)` | **1.22** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("gbmv!",1024)` | **1.18** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("ger!",1024)` | **1.09** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("symv!",1024)` | **0.95** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"factorization"` | `("eig","LowerTriangular",16)` | **1.06** :x: | 1.03 | 1.00 | 1.00 |
+| `"factorization"` | `("lu","Tridiagonal",16)` | **1.07** :x: | 1.03 | 1.00 | 1.00 |
+| `"linalg arithmetic"` | `("\\","LowerTriangular","Vector",16)` | **1.06** :x: | 0.99 | 1.00 | 1.00 |
+| `"linalg arithmetic"` | `("\\","UpperTriangular","Vector",16)` | **1.07** :x: | 1.02 | 1.00 | 1.00 |
+| `"scalar arithmetic"` | `("scalar_div","BigInt","Complex{Float64}")` | **1.05** :x: | 1.04 | 1.00 | 1.00 |
+| `"scalar arithmetic"` | `("scalar_fastmath_div","Complex{Float64}","Complex{Float32}")` | **1.07** :x: | 1.06 | 1.00 | 1.00 |
+| `"scalar arithmetic"` | `("scalar_sub","BigFloat","Int64")` | **1.13** :x: | 1.00 | 1.00 | 1.00 |
+| `"scalar arithmetic"` | `("scalar_sub","Complex{BigFloat}","Float32")` | **1.07** :x: | 1.03 | 1.00 | 1.00 |
+| `"simd"` | `("axpy!","Float32",1000)` | **1.06** :x: | 1.00 | 1.00 | 1.00 |
+| `"simd"` | `("axpy!","Int32",999)` | **1.05** :x: | 1.00 | 1.00 | 1.00 |
+| `"simd"` | `("conditional_loop!","Int32",255)` | **1.19** :x: | 1.00 | 1.00 | 1.00 |
+| `"simd"` | `("conditional_loop!","Int32",999)` | **1.15** :x: | 1.00 | 1.00 | 1.00 |
+| `"simd"` | `("inner","Int32",255)` | **1.09** :x: | 1.00 | 1.00 | 1.00 |
+| `"simd"` | `("manual_example!","Int32",255)` | **1.08** :x: | 1.00 | 1.00 | 1.00 |
+| `"sort mergesort"` | `("sort reverse","mergesort","random")` | 1.00 | 0.54 | 1.00 | **1.39** :x: |
+| `"sort sortperm insertionsort"` | `("sortperm reverse","insertionsort","ascending")` | 1.00 | 1.00 | 0.98 | **0.05** :white_check_mark: |
+| `"sort sortperm quicksort"` | `("sortperm reverse","quicksort","descending")` | **0.93** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"sparse matrix column indexing"` | `("dense logical",10,29,9)` | **1.06** :x: | 1.02 | 1.00 | 1.00 |
+| `"sparse matrix row + column indexing"` | `("dense logical",10,29)` | **1.08** :x: | 1.03 | 1.00 | 1.00 |
+| `"sparse matrix row + column indexing"` | `("integer",100,992,99)` | **1.23** :x: | 1.00 | 1.00 | 1.00 |
+| `"sparse matrix row + column indexing"` | `("integer",1000,31593,199)` | **1.22** :x: | 1.00 | 1.00 | 1.00 |
+| `"sparse vector indexing"` | `("integer",1000,37)` | **1.05** :x: | 1.00 | 1.00 | 1.00 |
+| `"sparse vector indexing"` | `("integer",100000,312)` | **1.05** :x: | 0.98 | 1.00 | 1.00 |
+| `"tuple indexing"` | `("sumelt","NTuple",60,Float32)` | **1.06** :x: | 1.00 | 1.00 | 1.00 |
 
 ## Version Info
 
@@ -56,19 +76,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (20064.24609375 MB free)
-Uptime: 1.3501407e7 sec
-Load Avg:  0.9970703125  0.7373046875  0.5341796875
+Memory: 31.383678436279297 GB (20035.35546875 MB free)
+Uptime: 1.3524753e7 sec
+Load Avg:  1.048828125  1.03857421875  1.013671875
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   13749630 s       1615 s    4286166 s  1327317186 s          4 s
-#2  3501 MHz    6619982 s        142 s    2255912 s  1339122657 s          0 s
-#3  3501 MHz    5667214 s       1139 s    2686874 s  1339931325 s          1 s
-#4  3501 MHz    5003806 s        319 s    2238148 s  1341507296 s          0 s
-#5  3501 MHz    3641424 s       4070 s    1744018 s  1344234869 s          0 s
-#6  3501 MHz    3243516 s       1003 s    1727516 s  1344702405 s          0 s
-#7  3501 MHz    3527222 s       2031 s    1629186 s  1344470238 s          0 s
-#8  3501 MHz    3700230 s       1242 s    1586842 s  1344432476 s          0 s
+#1  3501 MHz   13751657 s       1615 s    4295056 s  1329631265 s          4 s
+#2  3501 MHz    6768553 s        142 s    2270583 s  1341293843 s          0 s
+#3  3501 MHz    6050291 s       1139 s    2699738 s  1341869779 s          1 s
+#4  3501 MHz    5083572 s        319 s    2252977 s  1343747204 s          0 s
+#5  3501 MHz    4087194 s       4070 s    1759158 s  1346108442 s          0 s
+#6  3501 MHz    3250790 s       1003 s    1741833 s  1347015305 s          0 s
+#7  3501 MHz    3751105 s       2031 s    1644246 s  1346565735 s          0 s
+#8  3501 MHz    3708225 s       1242 s    1600352 s  1346745488 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -88,19 +108,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (20065.18359375 MB free)
-Uptime: 1.3501812e7 sec
-Load Avg:  0.9970703125  0.9306640625  0.697265625
+Memory: 31.383678436279297 GB (20016.85546875 MB free)
+Uptime: 1.3536411e7 sec
+Load Avg:  1.0029296875  1.0146484375  1.04541015625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   13749645 s       1615 s    4286337 s  1327357299 s          4 s
-#2  3501 MHz    6620877 s        142 s    2255934 s  1339162197 s          0 s
-#3  3501 MHz    5667497 s       1139 s    2686916 s  1339971454 s          1 s
-#4  3501 MHz    5040867 s        319 s    2238175 s  1341510671 s          0 s
-#5  3501 MHz    3642120 s       4070 s    1744044 s  1344274602 s          0 s
-#6  3501 MHz    3243520 s       1003 s    1727544 s  1344742825 s          0 s
-#7  3501 MHz    3527226 s       2031 s    1629206 s  1344510672 s          0 s
-#8  3501 MHz    3700250 s       1242 s    1586859 s  1344472898 s          0 s
+#1  3501 MHz   13752115 s       1615 s    4299250 s  1330787629 s          4 s
+#2  3501 MHz    6909063 s        142 s    2270711 s  1342318881 s          0 s
+#3  3501 MHz    6424156 s       1139 s    2703267 s  1342658044 s          1 s
+#4  3501 MHz    5299199 s        319 s    2253724 s  1344696514 s          0 s
+#5  3501 MHz    4295017 s       4070 s    1759957 s  1347065523 s          0 s
+#6  3501 MHz    3250826 s       1003 s    1741853 s  1348180940 s          0 s
+#7  3501 MHz    3968364 s       2031 s    1647379 s  1347511030 s          0 s
+#8  3501 MHz    3708418 s       1242 s    1600366 s  1347910994 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -113,4 +133,57 @@ Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz:
 
 Here's a list of all the benchmark groups executed by this job:
 
+- `"array bool"`
+- `"array cat"`
+- `"array comprehension"`
+- `"array growth"`
+- `"array index load reverse"`
+- `"array index setindex!"`
+- `"array index sum"`
+- `"array subarray"`
 - `"blas"`
+- `"factorization"`
+- `"iobuffer read"`
+- `"linalg arithmetic"`
+- `"micro"`
+- `"problem go game"`
+- `"problem grigoriadis khachiyan"`
+- `"problem imdb graphs"`
+- `"problem json parse"`
+- `"problem laplacian"`
+- `"problem monte carlo"`
+- `"problem raytrace"`
+- `"problem seismic simulation"`
+- `"problem simplex"`
+- `"problem sparse fem"`
+- `"problem spellcheck"`
+- `"problem stockcorr"`
+- `"problem ziggurat"`
+- `"scalar arithmetic"`
+- `"scalar predicate"`
+- `"shootout binary_trees"`
+- `"shootout fannkuch"`
+- `"shootout fasta"`
+- `"shootout k_nucleotide"`
+- `"shootout mandelbrot"`
+- `"shootout meteor_contest"`
+- `"shootout nbody_vec"`
+- `"shootout pidigits"`
+- `"shootout regex_dna"`
+- `"shootout revcomp"`
+- `"shootout spectralnorm"`
+- `"simd"`
+- `"sort insertionsort"`
+- `"sort issorted"`
+- `"sort mergesort"`
+- `"sort quicksort"`
+- `"sort sortperm insertionsort"`
+- `"sort sortperm mergesort"`
+- `"sort sortperm quicksort"`
+- `"sparse matrix column indexing"`
+- `"sparse matrix row + column indexing"`
+- `"sparse matrix row indexing"`
+- `"sparse matrix transpose"`
+- `"sparse vector indexing"`
+- `"string replace"`
+- `"tuple indexing"`
