upload markdown report for BenchmarkJob jrevels/julia@c284a86 vs. jrevels/julia@c284a86

--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215625803)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215705352)
 
 *Tag Predicate:* `ALL`
 
@@ -29,7 +29,16 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["tuple","index",("sumelt","NTuple",8,Float64)]` | 0.75 (20.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["array","index",("sumcolon","BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int32,2}")]` | 0.89 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["linalg","arithmetic",("+","Diagonal","Diagonal",256)]` | 1.16 (10.00%) :x: | 1.00 (1.00%)  |
+| `["linalg","arithmetic",("-","Diagonal","Diagonal",256)]` | 1.18 (10.00%) :x: | 1.00 (1.00%)  |
+| `["linalg","arithmetic",("-","Vector","Vector",256)]` | 1.14 (10.00%) :x: | 1.00 (1.00%)  |
+| `["linalg","blas","symv!"]` | 1.11 (10.00%) :x: | 1.00 (1.00%)  |
+| `["linalg","blas","symv"]` | 1.13 (10.00%) :x: | 1.00 (1.00%)  |
+| `["linalg","blas","trsv!"]` | 1.16 (10.00%) :x: | 1.00 (1.00%)  |
+| `["linalg","blas","trsv"]` | 1.18 (10.00%) :x: | 1.00 (1.00%)  |
+| `["scalar","arithmetic",("div","Complex{UInt64}","Complex{UInt64}")]` | 0.80 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["scalar","arithmetic",("sub","BigFloat","BigFloat")]` | 1.11 (10.00%) :x: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -86,15 +95,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13293.13671875 MB free)
-Uptime: 1.8278026e7 sec
-Load Avg:  1.0029296875  0.99560546875  0.7978515625
+Memory: 31.383678436279297 GB (13341.98046875 MB free)
+Uptime: 1.830776e7 sec
+Load Avg:  1.0029296875  0.990234375  0.79931640625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14336948 s       4525 s    6009233 s  1800702451 s          6 s
-#2  3501 MHz   16739194 s        142 s    2398689 s  1806312755 s          0 s
-#3  3501 MHz   10203520 s       1153 s    2794117 s  1812760907 s          1 s
-#4  3501 MHz    8978162 s        423 s    2367998 s  1814894730 s          0 s
+#1  3501 MHz   14347534 s       4540 s    6021509 s  1803640026 s          6 s
+#2  3501 MHz   17020352 s        142 s    2399248 s  1809004032 s          0 s
+#3  3501 MHz   10203546 s       1153 s    2794186 s  1815734073 s          1 s
+#4  3501 MHz    8978395 s        423 s    2368048 s  1817867715 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -114,15 +123,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13292.67578125 MB free)
-Uptime: 1.8279455e7 sec
-Load Avg:  1.0029296875  1.0146484375  0.95458984375
+Memory: 31.383678436279297 GB (13336.9765625 MB free)
+Uptime: 1.8309191e7 sec
+Load Avg:  1.0029296875  1.0146484375  0.9599609375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14337333 s       4525 s    6009878 s  1800843710 s          6 s
-#2  3501 MHz   16879680 s        142 s    2398947 s  1806314824 s          0 s
-#3  3501 MHz   10203532 s       1153 s    2794137 s  1812903771 s          1 s
-#4  3501 MHz    8978167 s        423 s    2368019 s  1815037600 s          0 s
+#1  3501 MHz   14348253 s       4540 s    6022117 s  1803781357 s          6 s
+#2  3501 MHz   17161166 s        142 s    2399558 s  1809005956 s          0 s
+#3  3501 MHz   10203603 s       1153 s    2794224 s  1815877126 s          1 s
+#4  3501 MHz    8978454 s        423 s    2368077 s  1818010789 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
