--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215814915)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215838334)
 
 *Tag Predicate:* `ALL`
 
@@ -29,14 +29,8 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["array","comprehension",("comprehension_indexing","FloatRange{Float64}")]` | 1.30 (10.00%) :x: | 1.00 (1.00%)  |
-| `["linalg","arithmetic",("-","SymTridiagonal","SymTridiagonal",256)]` | 1.22 (20.00%) :x: | 1.00 (1.00%)  |
-| `["scalar","arithmetic",("add","Complex{Int64}","Complex{Float64}")]` | 1.50 (20.00%) :x: | 1.00 (1.00%)  |
-| `["scalar","arithmetic",("sub","Float32","Complex{Float64}")]` | 1.50 (20.00%) :x: | 1.00 (1.00%)  |
 | `["scalar","arithmetic",("sub","Float64","Complex{Int64}")]` | 0.67 (20.00%) :white_check_mark: | 1.00 (1.00%)  |
-| `["scalar","predicate",("isfinite","Complex{BigFloat}")]` | 1.11 (10.00%) :x: | 1.00 (1.00%)  |
-| `["sparse","index",("spmat","row","logical",1000)]` | 1.15 (10.00%) :x: | 1.00 (1.00%)  |
-| `["tuple","index",("sumelt","TupleWrapper",30,Float64)]` | 0.88 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["simd",("conditional_loop!","Int64",4095)]` | 0.87 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -93,15 +87,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13332.140625 MB free)
-Uptime: 1.8322345e7 sec
-Load Avg:  1.0830078125  1.001953125  0.8046875
+Memory: 31.383678436279297 GB (13326.7890625 MB free)
+Uptime: 1.832697e7 sec
+Load Avg:  1.0029296875  1.001953125  0.830078125
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14352992 s       4540 s    6025658 s  1805084444 s          6 s
-#2  3501 MHz   17598678 s        142 s    2401558 s  1809880619 s          0 s
-#3  3501 MHz   10204397 s       1153 s    2795061 s  1817190389 s          1 s
-#4  3501 MHz    8979708 s        423 s    2368488 s  1819324266 s          0 s
+#1  3501 MHz   14355332 s       4540 s    6027137 s  1805541546 s          6 s
+#2  3501 MHz   17885675 s        142 s    2402371 s  1810054870 s          0 s
+#3  3501 MHz   10204836 s       1153 s    2795280 s  1817652115 s          1 s
+#4  3501 MHz    8980277 s        423 s    2368633 s  1819785973 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -121,15 +115,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13326.2890625 MB free)
-Uptime: 1.8323802e7 sec
-Load Avg:  1.01953125  1.02294921875  0.9599609375
+Memory: 31.383678436279297 GB (13320.2421875 MB free)
+Uptime: 1.8328426e7 sec
+Load Avg:  1.00390625  1.0146484375  0.9599609375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14353607 s       4540 s    6026327 s  1805228215 s          6 s
-#2  3501 MHz   17742174 s        142 s    2401825 s  1809882385 s          0 s
-#3  3501 MHz   10204426 s       1153 s    2795097 s  1817335953 s          1 s
-#4  3501 MHz    8979769 s        423 s    2368516 s  1819469811 s          0 s
+#1  3501 MHz   14355945 s       4540 s    6027773 s  1805685233 s          6 s
+#2  3501 MHz   18029048 s        142 s    2402670 s  1810056665 s          0 s
+#3  3501 MHz   10204940 s       1153 s    2795321 s  1817797528 s          1 s
+#4  3501 MHz    8980315 s        423 s    2368655 s  1819931473 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
