upload markdown report for BenchmarkJob jrevels/julia@c284a86 vs. jrevels/julia@c284a86

--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215838334)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215856443)
 
 *Tag Predicate:* `ALL`
 
@@ -29,8 +29,8 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["scalar","arithmetic",("sub","Float64","Complex{Int64}")]` | 0.67 (20.00%) :white_check_mark: | 1.00 (1.00%)  |
-| `["simd",("conditional_loop!","Int64",4095)]` | 0.87 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["tuple","index",("sumelt","TupleWrapper",30,Float32)]` | 1.15 (10.00%) :x: | 1.00 (1.00%)  |
+| `["tuple","index",("sumelt","TupleWrapper",30,Float64)]` | 0.81 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -87,15 +87,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13326.7890625 MB free)
-Uptime: 1.832697e7 sec
-Load Avg:  1.0029296875  1.001953125  0.830078125
+Memory: 31.383678436279297 GB (13289.89453125 MB free)
+Uptime: 1.8331121e7 sec
+Load Avg:  1.0029296875  0.9931640625  0.85498046875
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14355332 s       4540 s    6027137 s  1805541546 s          6 s
-#2  3501 MHz   17885675 s        142 s    2402371 s  1810054870 s          0 s
-#3  3501 MHz   10204836 s       1153 s    2795280 s  1817652115 s          1 s
-#4  3501 MHz    8980277 s        423 s    2368633 s  1819785973 s          0 s
+#1  3501 MHz   14356744 s       4540 s    6028451 s  1805952377 s          6 s
+#2  3501 MHz   18172682 s        142 s    2403090 s  1810181836 s          0 s
+#3  3501 MHz   10205196 s       1153 s    2795462 s  1818066521 s          1 s
+#4  3501 MHz    8980705 s        423 s    2368710 s  1820200474 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -115,15 +115,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13320.2421875 MB free)
-Uptime: 1.8328426e7 sec
-Load Avg:  1.00390625  1.0146484375  0.9599609375
+Memory: 31.383678436279297 GB (13288.7734375 MB free)
+Uptime: 1.8332566e7 sec
+Load Avg:  1.0029296875  1.0146484375  0.95458984375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14355945 s       4540 s    6027773 s  1805685233 s          6 s
-#2  3501 MHz   18029048 s        142 s    2402670 s  1810056665 s          0 s
-#3  3501 MHz   10204940 s       1153 s    2795321 s  1817797528 s          1 s
-#4  3501 MHz    8980315 s        423 s    2368655 s  1819931473 s          0 s
+#1  3501 MHz   14357781 s       4540 s    6029072 s  1806094682 s          6 s
+#2  3501 MHz   18314931 s        142 s    2403398 s  1810183736 s          0 s
+#3  3501 MHz   10205235 s       1153 s    2795506 s  1818210988 s          1 s
+#4  3501 MHz    8980763 s        423 s    2368740 s  1820344934 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
