--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215856443)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215871888)
 
 *Tag Predicate:* `ALL`
 
@@ -29,8 +29,10 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["tuple","index",("sumelt","TupleWrapper",30,Float32)]` | 1.15 (10.00%) :x: | 1.00 (1.00%)  |
-| `["tuple","index",("sumelt","TupleWrapper",30,Float64)]` | 0.81 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["linalg","factorization",("eigfact","Diagonal",256)]` | 0.68 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["scalar","arithmetic",("sub","Float64","Complex{Int64}")]` | 0.67 (20.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["sparse","index",("spmat","row","logical",1000)]` | 1.14 (10.00%) :x: | 1.00 (1.00%)  |
+| `["tuple","index",("sumelt","TupleWrapper",30,Float64)]` | 0.88 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -87,15 +89,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13289.89453125 MB free)
-Uptime: 1.8331121e7 sec
-Load Avg:  1.0029296875  0.9931640625  0.85498046875
+Memory: 31.383678436279297 GB (13285.44921875 MB free)
+Uptime: 1.8334403e7 sec
+Load Avg:  1.0029296875  0.98876953125  0.92919921875
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14356744 s       4540 s    6028451 s  1805952377 s          6 s
-#2  3501 MHz   18172682 s        142 s    2403090 s  1810181836 s          0 s
-#3  3501 MHz   10205196 s       1153 s    2795462 s  1818066521 s          1 s
-#4  3501 MHz    8980705 s        423 s    2368710 s  1820200474 s          0 s
+#1  3501 MHz   14358356 s       4540 s    6029684 s  1806276549 s          6 s
+#2  3501 MHz   18458428 s        142 s    2403734 s  1810223445 s          0 s
+#3  3501 MHz   10205291 s       1153 s    2795584 s  1818394518 s          1 s
+#4  3501 MHz    8980821 s        423 s    2368789 s  1820528516 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -115,15 +117,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13288.7734375 MB free)
-Uptime: 1.8332566e7 sec
-Load Avg:  1.0029296875  1.0146484375  0.95458984375
+Memory: 31.383678436279297 GB (13282.61328125 MB free)
+Uptime: 1.8335862e7 sec
+Load Avg:  1.0703125  1.0302734375  0.97607421875
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14357781 s       4540 s    6029072 s  1806094682 s          6 s
-#2  3501 MHz   18314931 s        142 s    2403398 s  1810183736 s          0 s
-#3  3501 MHz   10205235 s       1153 s    2795506 s  1818210988 s          1 s
-#4  3501 MHz    8980763 s        423 s    2368740 s  1820344934 s          0 s
+#1  3501 MHz   14358883 s       4540 s    6030302 s  1806420625 s          6 s
+#2  3501 MHz   18602045 s        142 s    2404047 s  1810225226 s          0 s
+#3  3501 MHz   10205350 s       1153 s    2795636 s  1818540197 s          1 s
+#4  3501 MHz    8980851 s        423 s    2368837 s  1820674243 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
