upload markdown report for BenchmarkJob jrevels/julia@c284a86 vs. jrevels/julia@c284a86

--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215902081)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215909216)
 
 *Tag Predicate:* `ALL`
 
@@ -29,10 +29,7 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["array","index",("sumvector","Array{Float32,2}")]` | 1.17 (15.00%) :x: | 1.00 (1.00%)  |
-| `["array","index",("sumvector","SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},false}")]` | 1.27 (15.00%) :x: | 1.00 (1.00%)  |
-| `["array","index",("sumvector","SubArray{Int32,2,Array{Int32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},false}")]` | 1.23 (15.00%) :x: | 1.00 (1.00%)  |
-| `["sparse","transpose",("transpose!",(600,400))]` | 1.30 (15.00%) :x: | 1.00 (1.00%)  |
+| `["array","index",("sumelt","SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},false}")]` | 0.74 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -89,15 +86,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13308.61328125 MB free)
-Uptime: 1.8343158e7 sec
-Load Avg:  1.0029296875  1.0146484375  0.8544921875
+Memory: 31.383678436279297 GB (13278.73828125 MB free)
+Uptime: 1.8346433e7 sec
+Load Avg:  1.00439453125  1.001953125  0.91943359375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14362128 s       4540 s    6032646 s  1807142161 s          6 s
-#2  3501 MHz   19027600 s        142 s    2405318 s  1810527422 s          0 s
-#3  3501 MHz   10206258 s       1153 s    2796069 s  1819268271 s          1 s
-#4  3501 MHz    8981369 s        423 s    2369096 s  1821402995 s          0 s
+#1  3501 MHz   14363917 s       4540 s    6033883 s  1807465328 s          6 s
+#2  3501 MHz   19309794 s        142 s    2405988 s  1810571819 s          0 s
+#3  3501 MHz   10206322 s       1153 s    2796166 s  1819595554 s          1 s
+#4  3501 MHz    8981469 s        423 s    2369162 s  1821730270 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -117,15 +114,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13307.5625 MB free)
-Uptime: 1.8344591e7 sec
-Load Avg:  0.9970703125  1.0087890625  0.95458984375
+Memory: 31.383678436279297 GB (13275.61328125 MB free)
+Uptime: 1.8347863e7 sec
+Load Avg:  1.0029296875  1.0146484375  0.97021484375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14362674 s       4540 s    6033203 s  1807283745 s          6 s
-#2  3501 MHz   19168705 s        142 s    2405629 s  1810529194 s          0 s
-#3  3501 MHz   10206301 s       1153 s    2796108 s  1819411452 s          1 s
-#4  3501 MHz    8981431 s        423 s    2369112 s  1821546177 s          0 s
+#1  3501 MHz   14364010 s       4540 s    6034504 s  1807607015 s          6 s
+#2  3501 MHz   19450610 s        142 s    2406304 s  1810573605 s          0 s
+#3  3501 MHz   10206355 s       1153 s    2796216 s  1819738461 s          1 s
+#4  3501 MHz    8981496 s        423 s    2369214 s  1821873195 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
