upload markdown report for BenchmarkJob jrevels/julia@c284a86 vs. jrevels/julia@c284a86

--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216255368)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216282909)
 
 *Tag Predicate:* `ALL`
 
@@ -29,9 +29,9 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["linalg","arithmetic",("+","Vector","Vector",256)]` | 1.23 (20.00%) :x: | 1.00 (1.00%)  |
-| `["sort","issorted",("reverse","descending")]` | 1.20 (15.00%) :x: | 1.00 (1.00%)  |
-| `["tuple","index",("sumelt","TupleWrapper",8,Float64)]` | 1.33 (20.00%) :x: | 1.00 (1.00%)  |
+| `["array","index",("sumelt","100000000:-1:1")]` | 0.65 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["linalg","factorization",("eigfact","Diagonal",256)]` | 1.17 (15.00%) :x: | 1.00 (1.00%)  |
+| `["tuple","index",("sumelt","TupleWrapper",8,Float32)]` | 0.75 (20.00%) :white_check_mark: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -88,15 +88,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13340.40625 MB free)
-Uptime: 1.8573294e7 sec
-Load Avg:  0.9970703125  0.9853515625  0.80908203125
+Memory: 31.383678436279297 GB (13303.546875 MB free)
+Uptime: 1.8578923e7 sec
+Load Avg:  1.0029296875  0.9853515625  0.8115234375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14379215 s       4555 s    6068652 s  1830045113 s          9 s
-#2  3501 MHz   19809866 s        142 s    2426592 s  1832716595 s          0 s
-#3  3501 MHz   10210558 s       1153 s    2818616 s  1842240372 s          1 s
-#4  3501 MHz    8985558 s        454 s    2378922 s  1844395128 s          0 s
+#1  3501 MHz   14379532 s       4555 s    6070320 s  1830604148 s          9 s
+#2  3501 MHz   20107442 s        142 s    2427750 s  1832980310 s          0 s
+#3  3501 MHz   10211287 s       1153 s    2818955 s  1842801973 s          1 s
+#4  3501 MHz    8985820 s        454 s    2379098 s  1844957474 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -116,15 +116,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13333.71875 MB free)
-Uptime: 1.8574806e7 sec
+Memory: 31.383678436279297 GB (13301.5390625 MB free)
+Uptime: 1.8580433e7 sec
 Load Avg:  1.0029296875  1.0146484375  0.95458984375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14379283 s       4555 s    6069313 s  1830194961 s          9 s
-#2  3501 MHz   19958619 s        142 s    2427088 s  1832718469 s          0 s
-#3  3501 MHz   10210802 s       1153 s    2818663 s  1842391300 s          1 s
-#4  3501 MHz    8985605 s        454 s    2378951 s  1844546282 s          0 s
+#1  3501 MHz   14379617 s       4555 s    6070964 s  1830753786 s          9 s
+#2  3501 MHz   20256262 s        142 s    2428212 s  1832981932 s          0 s
+#3  3501 MHz   10211317 s       1153 s    2818995 s  1842952887 s          1 s
+#4  3501 MHz    8985860 s        454 s    2379127 s  1845108400 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
