upload markdown report for BenchmarkJob jrevels/julia@c284a86 vs. jrevels/julia@c284a86

--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216392980)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216399079)
 
 *Tag Predicate:* `ALL`
 
@@ -29,7 +29,7 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["tuple","index",("sumelt","TupleWrapper",30,Float64)]` | 1.15 (15.00%) :x: | 1.00 (1.00%)  |
+| `["scalar","fastmath",("div","Complex{UInt64}")]` | 1.25 (20.00%) :x: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -86,15 +86,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13282.79296875 MB free)
-Uptime: 1.8605753e7 sec
-Load Avg:  1.0029296875  1.0146484375  1.0244140625
+Memory: 31.383678436279297 GB (13278.74609375 MB free)
+Uptime: 1.8608773e7 sec
+Load Avg:  1.025390625  1.0244140625  1.04541015625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14382159 s       4555 s    6078713 s  1833266769 s          9 s
-#2  3501 MHz   21891615 s        142 s    2434153 s  1833870903 s          0 s
-#3  3501 MHz   10212344 s       1153 s    2820323 s  1845481724 s          1 s
-#4  3501 MHz    8986674 s        454 s    2379792 s  1847638527 s          0 s
+#1  3501 MHz   14382322 s       4555 s    6079940 s  1833566190 s          9 s
+#2  3501 MHz   22188694 s        142 s    2435108 s  1833874666 s          0 s
+#3  3501 MHz   10212449 s       1153 s    2820392 s  1845783521 s          1 s
+#4  3501 MHz    8986737 s        454 s    2379839 s  1847940419 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -114,15 +114,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13281.18359375 MB free)
-Uptime: 1.8607259e7 sec
+Memory: 31.383678436279297 GB (13278.42578125 MB free)
+Uptime: 1.8610282e7 sec
 Load Avg:  1.0029296875  1.0146484375  1.04541015625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14382240 s       4555 s    6079355 s  1833416010 s          9 s
-#2  3501 MHz   22039976 s        142 s    2434652 s  1833872510 s          0 s
-#3  3501 MHz   10212389 s       1153 s    2820345 s  1845632209 s          1 s
-#4  3501 MHz    8986700 s        454 s    2379813 s  1847789041 s          0 s
+#1  3501 MHz   14382397 s       4555 s    6080530 s  1833715829 s          9 s
+#2  3501 MHz   22337376 s        142 s    2435558 s  1833876315 s          0 s
+#3  3501 MHz   10212509 s       1153 s    2820441 s  1845934276 s          1 s
+#4  3501 MHz    8986776 s        454 s    2379868 s  1848091223 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
