upload markdown report for BenchmarkJob jrevels/julia@c284a86 vs. jrevels/julia@c284a86

--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216541311)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216541387)
 
 *Tag Predicate:* `ALL`
 
@@ -29,7 +29,7 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["array","index",("sumelt_boundscheck","100000000:-1:1")]` | 1.36 (15.00%) :x: | 1.00 (1.00%)  |
+| `["linalg","blas","scal"]` | 0.82 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -86,15 +86,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13285.8125 MB free)
-Uptime: 1.8657611e7 sec
-Load Avg:  1.0029296875  0.9853515625  0.95458984375
+Memory: 31.383678436279297 GB (13278.828125 MB free)
+Uptime: 1.8660637e7 sec
+Load Avg:  1.0029296875  1.0146484375  0.98681640625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14384536 s       4555 s    6090514 s  1838423028 s          9 s
-#2  3501 MHz   23377084 s        213 s    2441468 s  1837560502 s          0 s
-#3  3501 MHz   10214048 s       1153 s    2824523 s  1850658543 s          1 s
-#4  3501 MHz    8987532 s        454 s    2381670 s  1852820216 s          0 s
+#1  3501 MHz   14384685 s       4555 s    6091647 s  1838723214 s          9 s
+#2  3501 MHz   23673864 s        213 s    2442428 s  1837565211 s          0 s
+#3  3501 MHz   10214165 s       1153 s    2824610 s  1850960973 s          1 s
+#4  3501 MHz    8987802 s        454 s    2381727 s  1853122542 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -114,15 +114,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13282.4765625 MB free)
-Uptime: 1.8659117e7 sec
-Load Avg:  1.0029296875  1.001953125  0.9599609375
+Memory: 31.383678436279297 GB (13276.859375 MB free)
+Uptime: 1.8662148e7 sec
+Load Avg:  1.0029296875  1.0146484375  1.0029296875
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14384595 s       4555 s    6091072 s  1838572442 s          9 s
-#2  3501 MHz   23525428 s        213 s    2441969 s  1837562171 s          0 s
-#3  3501 MHz   10214109 s       1153 s    2824567 s  1850809038 s          1 s
-#4  3501 MHz    8987612 s        454 s    2381700 s  1852970719 s          0 s
+#1  3501 MHz   14384769 s       4555 s    6092208 s  1838873052 s          9 s
+#2  3501 MHz   23822674 s        213 s    2442895 s  1837566893 s          0 s
+#3  3501 MHz   10214258 s       1153 s    2824648 s  1851111890 s          1 s
+#4  3501 MHz    8987833 s        454 s    2381760 s  1853273522 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
