upload markdown report for BenchmarkJob jrevels/julia@c284a86 vs. jrevels/julia@c284a86

--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-217689771)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-217718297)
 
 *Tag Predicate:* `ALL`
 
@@ -29,7 +29,8 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["linalg","factorization",("eigfact","Diagonal",256)]` | 0.77 (20.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["array","index",("sumcolon","Array{Int32,2}")]` | 1.20 (15.00%) :x: | 1.00 (1.00%)  |
+| `["tuple","index",("sumelt","TupleWrapper",30,Float32)]` | 1.31 (20.00%) :x: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -86,15 +87,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-85-generic #129-Ubuntu SMP Thu Mar 17 20:50:15 UTC 2016 x86_64 x86_64
-Memory: 31.383651733398438 GB (22144.46875 MB free)
-Uptime: 219495.0 sec
-Load Avg:  1.0029296875  1.001953125  0.9599609375
+Memory: 31.383651733398438 GB (22118.140625 MB free)
+Uptime: 253674.0 sec
+Load Avg:  1.0029296875  1.001953125  0.95458984375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz     386697 s          0 s      89133 s   21406116 s          0 s
-#2  3501 MHz    1119663 s          0 s      46343 s   20772434 s          0 s
-#3  3501 MHz     331762 s          0 s      41614 s   21565483 s          0 s
-#4  3501 MHz     308322 s          0 s      40948 s   21590408 s          0 s
+#1  3501 MHz     514541 s          0 s     108686 s   24666009 s          0 s
+#2  3501 MHz    1509486 s          0 s      58927 s   23786794 s          0 s
+#3  3501 MHz     529166 s          0 s      60779 s   24763879 s          1 s
+#4  3501 MHz     458822 s          0 s      56960 s   24840009 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -114,15 +115,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-85-generic #129-Ubuntu SMP Thu Mar 17 20:50:15 UTC 2016 x86_64 x86_64
-Memory: 31.383651733398438 GB (22131.78125 MB free)
-Uptime: 224110.0 sec
-Load Avg:  1.3671875  1.10498046875  1.0029296875
+Memory: 31.383651733398438 GB (22107.765625 MB free)
+Uptime: 258265.0 sec
+Load Avg:  1.0029296875  1.00537109375  0.955078125
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz     434257 s          0 s      95062 s   21812572 s          0 s
-#2  3501 MHz    1311964 s          0 s      52686 s   21034877 s          0 s
-#3  3501 MHz     437474 s          0 s      50847 s   21911372 s          1 s
-#4  3501 MHz     395453 s          0 s      48549 s   21956753 s          0 s
+#1  3501 MHz     570079 s          0 s     116468 s   25060334 s          0 s
+#2  3501 MHz    1788748 s          0 s      68280 s   23956958 s          0 s
+#3  3501 MHz     567309 s          0 s      65992 s   25178769 s          1 s
+#4  3501 MHz     516410 s          0 s      63648 s   25234324 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
