upload markdown report for BenchmarkJob jrevels/julia@a087e6f vs. jrevels/julia@c9d4051

--- a/a087e6f/a087e6f_vs_c9d4051.md
+++ b/a087e6f/a087e6f_vs_c9d4051.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@a087e6fd877fb1508862fc42af5b2608cc5ad1ec](https://github.com/jrevels/julia/commit/a087e6fd877fb1508862fc42af5b2608cc5ad1ec) vs [jrevels/julia@c9d405156f8c13a2b81f268529fec3ecf9ac651a](https://github.com/jrevels/julia/commit/c9d405156f8c13a2b81f268529fec3ecf9ac651a)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/5#issuecomment-218488382)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/5#issuecomment-220181031)
 
 *Tag Predicate:* `ALL`
 
@@ -29,7 +29,7 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["sparse","index",("spmat","integer",1000)]` | 0.78 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["shootout","revcomp"]` | 1.34 (15%) :x: | 1.00 (1%)  |
 
 ## Benchmark Group List
 
@@ -86,15 +86,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-85-generic #129-Ubuntu SMP Thu Mar 17 20:50:15 UTC 2016 x86_64 x86_64
-Memory: 31.383651733398438 GB (22097.63671875 MB free)
-Uptime: 519203.0 sec
-Load Avg:  1.01806640625  1.0224609375  0.9599609375
+Memory: 31.383651733398438 GB (20964.5390625 MB free)
+Uptime: 1.151766e6 sec
+Load Avg:  1.0029296875  1.0146484375  0.99755859375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz     996762 s          0 s     219026 s   50546653 s          0 s
-#2  3501 MHz    4065434 s          0 s     133807 s   47696835 s          0 s
-#3  3501 MHz    1010586 s          0 s     116160 s   50767573 s          1 s
-#4  3501 MHz     963950 s          0 s     119152 s   50811309 s          1 s
+#1  3501 MHz    1615555 s          0 s     469164 s  112701173 s          0 s
+#2  3501 MHz    5370788 s          0 s     184399 s  109592662 s          0 s
+#3  3501 MHz    1052309 s          0 s     133506 s  113950433 s          1 s
+#4  3501 MHz    1025287 s          0 s     127925 s  113992946 s          1 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -114,15 +114,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-85-generic #129-Ubuntu SMP Thu Mar 17 20:50:15 UTC 2016 x86_64 x86_64
-Memory: 31.383651733398438 GB (22067.0625 MB free)
-Uptime: 523831.0 sec
-Load Avg:  1.0029296875  1.0146484375  0.970703125
+Memory: 31.383651733398438 GB (20810.8125 MB free)
+Uptime: 1.156378e6 sec
+Load Avg:  1.0166015625  1.0146484375  0.96533203125
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz    1125120 s          0 s     229674 s   50869215 s          0 s
-#2  3501 MHz    4271504 s          0 s     140062 s   47946903 s          0 s
-#3  3501 MHz    1050240 s          0 s     121698 s   51184136 s          1 s
-#4  3501 MHz    1023582 s          0 s     126112 s   51207027 s          1 s
+#1  3501 MHz    1667934 s          0 s     476767 s  113100980 s          1 s
+#2  3501 MHz    5642658 s          0 s     194541 s  109771512 s          0 s
+#3  3501 MHz    1096429 s          0 s     139098 s  114360978 s          1 s
+#4  3501 MHz    1089022 s          0 s     133967 s  114383894 s          1 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
